--- a/action.yaml
+++ b/action.yaml
@@ -58,18 +58,19 @@ runs:
     - name: Run gitleaks compliance plugin
       shell: bash
       run: |
+        CMD="--mode single"
+        if [[ "${{ inputs.license }}" == "true" ]]; then
+          CMD="$CMD -license"
+        fi
+
         docker run --rm \
-          -v $GITHUB_WORKSPACE:$GITHUB_WORKSPACE \
-          -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
-          -e RUN_ID="${{ inputs.run_id }}" \
-          -e JOB_ID="${{ inputs.job_id }}" \
-          -e STEP_ID="${{ inputs.step_id }}" \
-          public.ecr.aws/l7o7z1g8/actions/assets-trivy-scanner:90ac7296abb2c0c877b3364b5ce21ccf50cb0353 \
-          if [ "${{ inputs.license }}" = "true" ]; then
-            --mode single -license
-          else
-            --mode single
-          fi
+        -v "$GITHUB_WORKSPACE:$GITHUB_WORKSPACE" \
+        -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
+        -e RUN_ID="${{ inputs.run_id }}" \
+        -e JOB_ID="${{ inputs.job_id }}" \
+        -e STEP_ID="${{ inputs.step_id }}" \
+        public.ecr.aws/l7o7z1g8/actions/assets-trivy-scanner:90ac7296abb2c0c877b3364b5ce21ccf50cb0353 \
+        /app/plugin-trivy-scanner $CMD
 
     - name: Complete execution plan
       shell: bash
