--- a/action.yaml
+++ b/action.yaml
@@ -55,12 +55,12 @@ runs:
           generate-references --asset-type "BINARY" --tags "BINARY_CONTAINER" --binary-tar-path ${{ inputs.binary-tar-path }}
 
 
-    - name: Run gitleaks compliance plugin
+    - name: Run trivy compliance plugin
       shell: bash
       run: |
-        CMD="--mode single"
+        CMD=(--mode single)
         if [[ "${{ inputs.license }}" == "true" ]]; then
-          CMD="$CMD -license"
+          CMD+=( -license )
         fi
 
         docker run --rm \
@@ -70,7 +70,7 @@ runs:
         -e JOB_ID="${{ inputs.job_id }}" \
         -e STEP_ID="${{ inputs.step_id }}" \
         public.ecr.aws/l7o7z1g8/actions/assets-trivy-scanner:90ac7296abb2c0c877b3364b5ce21ccf50cb0353 \
-        $CMD
+        /app/plugin-trivy-scanner "${CMD[@]}"
 
     - name: Complete execution plan
       shell: bash
