--- a/action.yaml
+++ b/action.yaml
@@ -45,7 +45,7 @@ runs:
           -e INPUT_RUN_ID="${{ inputs.run_id }}" \
           -e INPUT_IS_GITHUB_WORKFLOW="${{ inputs.is-github-workflow }}" \
           -e GITHUB_RUN_ID="${{ github.run_id }}" \
-          -e GITHUB_WORKFLOW_REF="hjs-testing/gha-deeper-integration-testing/.github/workflows/test-results.yml@refs/heads/main" \
+          -e GITHUB_WORKFLOW_REF="${{ github.workflow_ref }}" \
           -e GITHUB_RUN_ATTEMPT="${{ github.run_attempt }}" \
           -e GITHUB_RUN_NUMBER="${{ github.run_number }}" \
           -e GITHUB_REF_NAME="${{ github.ref_name }}" \
@@ -85,7 +85,7 @@ runs:
           -e INPUT_RUN_ID="${{ inputs.run_id }}" \
           -e INPUT_IS_GITHUB_WORKFLOW="${{ inputs.is-github-workflow }}" \
           -e GITHUB_RUN_ID="${{ github.run_id }}" \
-          -e GITHUB_WORKFLOW_REF="hjs-testing/gha-deeper-integration-testing/.github/workflows/test-results.yml@refs/heads/main" \
+          -e GITHUB_WORKFLOW_REF="${{ github.workflow_ref }}" \
           -e GITHUB_RUN_ATTEMPT="${{ github.run_attempt }}" \
           -e GITHUB_RUN_NUMBER="${{ github.run_number }}" \
           -e GITHUB_REF_NAME="${{ github.ref_name }}" \
