--- a/action.yaml
+++ b/action.yaml
@@ -35,6 +35,14 @@ runs:
   using: "composite"
   steps:
 
+    - name: Create request JSON file in workspace
+      shell: bash
+      run: |
+        FILE_PATH="$GITHUB_WORKSPACE/store/request/request.json"
+        mkdir -p "$(dirname "$FILE_PATH")"
+        touch "$FILE_PATH"
+        echo "File created at: $FILE_PATH"  
+
     - name: Generate reference files 
       shell: bash
       run: |
