--- a/action.yaml
+++ b/action.yaml
@@ -9,12 +9,6 @@ inputs:
     description: Cloudbees API URL
     required: false
     default: "https://api.cloudbees.io"
-  run_id: 
-    description: GHA Run ID
-    required: false
-  job_id:
-    description: GHA Job ID
-    required: false
   step_id:
     description: GHA Step ID
     required: false
@@ -77,8 +71,8 @@ runs:
         -u root \
         -v "$GITHUB_WORKSPACE:$GITHUB_WORKSPACE" \
         -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
-        -e RUN_ID="${{ inputs.run_id }}" \
-        -e JOB_ID="${{ inputs.job_id }}" \
+        -e RUN_ID="${{ github.run_id }}" \
+        -e JOB_ID="${{ github.job }}" \
         -e STEP_ID="${{ inputs.step_id }}" \
         public.ecr.aws/l7o7z1g8/actions/assets-trivy-scanner:182394335695d9558ce04dd2603ca13c2436be35 \
         "${CMD[@]}"
