--- a/action.yaml
+++ b/action.yaml
@@ -13,10 +13,6 @@ inputs:
     description: GHA Step ID
     required: false
     default: "step-006"
-  is-github-workflow:
-    description: Flag to indicate if the action is running in GitHub workflow
-    required: false
-    default: true
   binary-tar-path:
     description: 'Path to the binary to scan'
     required: true
@@ -45,7 +41,7 @@ runs:
           -e INPUT_CLOUDBEES_API_TOKEN="${{ inputs.cloudbees-pat }}" \
           -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees-url }}" \
           -e INPUT_RUN_ID="${{ github.run_id }}" \
-          -e INPUT_IS_GITHUB_WORKFLOW="${{ inputs.is-github-workflow }}" \
+          -e INPUT_IS_GITHUB_WORKFLOW="true" \
           -e GITHUB_RUN_ID="${{ github.run_id }}" \
           -e GITHUB_WORKFLOW_REF="${{ github.workflow_ref }}" \
           -e GITHUB_RUN_ATTEMPT="${{ github.run_attempt }}" \
@@ -88,7 +84,7 @@ runs:
           -e INPUT_CLOUDBEES_API_TOKEN="${{ inputs.cloudbees-pat }}" \
           -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees-url }}" \
           -e INPUT_RUN_ID="${{ github.run_id }}" \
-          -e INPUT_IS_GITHUB_WORKFLOW="${{ inputs.is-github-workflow }}" \
+          -e INPUT_IS_GITHUB_WORKFLOW="true" \
           -e GITHUB_RUN_ID="${{ github.run_id }}" \
           -e GITHUB_WORKFLOW_REF="${{ github.workflow_ref }}" \
           -e GITHUB_RUN_ATTEMPT="${{ github.run_attempt }}" \
