--- a/action.yaml
+++ b/action.yaml
@@ -12,7 +12,7 @@ inputs:
   binary-tar-path:
     description: 'Path to the binary to scan'
     required: true
-  step_id:
+  step-id:
     description: GHA Step ID
     required: false
     default: ''
@@ -69,7 +69,7 @@ runs:
         -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
         -e RUN_ID="${{ github.run_id }}" \
         -e JOB_ID="${{ github.job }}" \
-        -e STEP_ID="${{ inputs.step_id }}" \
+        -e STEP_ID="${{ inputs.step-id }}" \
         public.ecr.aws/l7o7z1g8/actions/assets-trivy-scanner:182394335695d9558ce04dd2603ca13c2436be35 \
         "${CMD[@]}"
 
